--- a/sigmaker/index.html
+++ b/sigmaker/index.html
@@ -1,63 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>HackBeanpot Internal Signature Maker</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    />
     <!-- Important: import Nunito font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito"
+      rel="stylesheet"
+    />
     <style>
-        h1, h2, h3, h4, * {font-family: Nunito, sans-serif; color: #1B365D;}
-        .btn-primary {background: #A4DBE8; border: 2px solid #A4DBE8;}
+      h1,
+      h2,
+      h3,
+      h4,
+      * {
+        font-family: Nunito, sans-serif;
+        color: #1b365d;
+      }
     </style>
-</head>
-<body class="pt-5">
+  </head>
+  <body class="pt-5">
     <div class="row">
-        <div class="col-xs-6 mx-auto">
-            <h2>Enter your info here!</h2>
-            <form class="mt-3">
-                Full name:
-                <br />
-                <input type="text" name="name" />
-                <br />
-                Title:
-                <br />
-                <input type="text" name="title" />
-                <br />
-                Phone:
-                <br />
-                <input type="text" name="phone" />
-                <br />
-                Email:
-                <br />
-                <input type="text" name="email" />@hackbeanpot.com
-                <br />
-                <input class="btn btn-primary mt-4" type="submit" value="Generate Email Signature!" />
-            </form>
-        </div>
+      <div class="col-xs-6 mx-auto">
+        <h2>Enter your info here!</h2>
+        <form class="mt-3">
+          Full name:
+          <br />
+          <input type="text" name="name" />
+          <br />
+          Title:
+          <br />
+          <input type="text" name="title" />
+          <br />
+          Phone:
+          <br />
+          <input type="text" name="phone" />
+          <br />
+          Email:
+          <br />
+          <input type="text" name="email" />@hackbeanpot.com
+          <br />
+          <input
+            class="btn btn-primary mt-4"
+            type="submit"
+            value="Generate Email Signature!"
+          />
+        </form>
+      </div>
 
-        <div class="col-xs-6 mx-auto">
-            <h3 class="ml-3">Paste this into Gmail!</h3>
-            <div id="output">
-                <em class="p-4">you gotta press submit first tho</em>
-            </div>
+      <div class="col-xs-6 mx-auto">
+        <h3 class="ml-3">Paste this into Gmail!</h3>
+        <div id="output">
+          <em class="p-4">you gotta press submit first tho</em>
         </div>
+      </div>
     </div>
 
     <hr />
     <div class="row">
-        <div class="col-xs-12 mx-auto">
-                <footer>
-                        <p>made with &lt;3 by ya boy nabeel :) also ashna is a loser</p>
-                </footer>
-        </div>
+      <div class="col-xs-12 mx-auto">
+        <footer>
+          <p>made with &lt;3 by ya boy nabeel :) also ashna is a loser</p>
+        </footer>
+      </div>
     </div>
 
     <!--Scripts-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
