--- a/sigmaker/index.html
+++ b/sigmaker/index.html
@@ -11,9 +11,9 @@
       media="screen"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
     />
-    <!-- Important: import Nunito font -->
+    <!-- Important: import Nunito Sans font -->
     <link
-      href="https://fonts.googleapis.com/css?family=Nunito"
+      href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap"
       rel="stylesheet"
     />
     <style>
@@ -22,7 +22,7 @@
       h3,
       h4,
       * {
-        font-family: Nunito, sans-serif;
+        font-family: Nunito Sans, sans-serif;
         color: #1b365d;
       }
     </style>
